# txt2img

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GUIDE.md  MEMO.md  README.ja.md  README.md  Taskfile.yml  docker-compose.yml  start.sh
client/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
server/: README.md  pyproject.toml  test_anima.py
server/presets/: config.schema.json  copycat-illustrious_full.json  copycat-illustrious_lowvram.json  wai-illustrious-sdxl_full.json
server/presets/anima/: preview.json
server/presets/chroma/: base.json  flash.json  hd.json
server/presets/civitai/: il_copycat.json  il_wai.json
server/presets/flux/: dev.json  schnell.json
server/presets/sample/: copycat-illustrious_full.json  copycat-illustrious_lowvram.json  wai-illustrious-sdxl_full.json
server/presets/sdxl/: illustrious.json
server/presets/zimage/: turbo.json
server/src/txt2img/: __init__.py  config.py  main.py
server/src/txt2img/api/: router.py  schemas.py  sse.py
server/src/txt2img/core/: base_pipeline.py  image_processor.py  job_queue.py  lora_manager.py  pipeline.py  prompt_parser.py
server/src/txt2img/models/: air_parser.py  civitai.py  huggingface.py
server/src/txt2img/pipelines/: __init__.py  anima.py  chroma.py  flux_dev.py  flux_schnell.py  sdxl.py  zimage.py
server/src/txt2img/providers/: __init__.py  civitai.py  huggingface.py
server/src/txt2img/utils/: __init__.py  prompt_parser.py
server/tests/: test_air_parser.py  test_anima_pipeline.py  test_prompt_parser.py  test_settings_paths.py
(+37 files in other folders)
